feat: implement multi-tenancy and RBAC for acme-contracts alignment
Multi-Tenancy:
- Add Tenant entity with id, name, slug, timestamps
- Add TenantRepository for tenant management
- Update User entity with tenant_id foreign key and roles collection
- Create V2 migration for tenants and user_roles tables
- Insert default tenant for backward compatibility

Enhanced JWT Tokens:
- Add tenant_id, roles[], and scopes[] claims to JWT
- Implement scope generation based on roles:
  * ROLE_ADMIN: full access (tickets:*, users:*)
  * ROLE_AGENT: assigned tickets + read any
  * ROLE_USER: own tickets only
- Add helper methods to extract tenant, roles, scopes from tokens

RBAC Implementation:
- Create @RequireRole annotation for role-based access control
- Create @RequireScope annotation for scope-based access control
- Implement RbacAspect using AOP to enforce authorization
- Add spring-boot-starter-aop dependency
- Support requireAll flag for multiple roles/scopes

Error Handling:
- Update all error responses to use application/problem+json
- Add AccessDeniedException handler for RBAC violations (403)
- Maintain consistent error format across all exceptions

Documentation:
- Add CONTRACTS_ALIGNMENT.md with implementation details
- Document usage examples for RBAC annotations
- List integration work still needed in AuthService

Aligns with acme-contracts AuthUser schema requirements.

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <optional>true</optional>
         </dependency>
         
+        <!-- AspectJ for RBAC -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        
         <!-- Spring Boot Starter Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
